--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ts-node": "^1.3.0",
     "tslint": "3.15.0-dev.0",
     "tslint-loader": "^2.1.3",
-    "typescript": "2.0.0",
+    "typescript": "2.0.2",
     "typings": "1.3.3",
 
     "webpack": "^2.1.0-beta.21"
@@ -38,6 +38,9 @@
   "bugs": {
     "url": "https://github.com/apoterenko/ts-smart-logger/issues"
   },
+  "module": "index.js",
+  "typings": "index.d.ts",
+  "main": "index.js",
   "engines": {
     "node": ">= 4.2.1",
     "npm": ">= 3"
