--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "license": "MIT",
   "scripts": {
     "clean": "npm cache clean",
-    "typings-install": "node_modules/.bin/typings \"install\"",
     "tsc-build": "node \"node_modules/typescript/bin/tsc\"",
-    "deploy": "npm install && npm run typings-install && npm run tsc-build && npm publish ./"
+    "deploy": "npm install && npm run tsc-build && npm publish ./"
   },
   "peerDependencies": {
     "core-js": "^2.4.0"
@@ -15,19 +14,21 @@
     "core-js": "^2.4.0",
     "jasmine-core": "2.4.1",
 
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.0.0",
-    "karma-jasmine": "1.0.2",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0 ",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
     "karma-webpack": "1.8.0",
 
     "awesome-typescript-loader": "2.2.1",
     "ts-helpers": "1.1.1",
     "ts-node": "^1.3.0",
-    "tslint": "3.15.0-dev.0",
+    "tslint": "3.15.1",
     "tslint-loader": "^2.1.3",
-    "typescript": "2.0.2",
-    "typings": "1.3.3",
+    "typescript": "2.0.0",
+    "@types/core-js": "^0.9.28",
+    "@types/node": "^6.0.38",
+    "@types/jasmine": "^2.2.29",
 
     "webpack": "^2.1.0-beta.21"
   },
