ignore full src folder

--- a/.npmignore
+++ b/.npmignore
@@ -3,6 +3,7 @@
 .gitignore
 .npmignore
 
+src
 demo
 config
 typings
@@ -11,6 +12,4 @@ node_modules
 *.log
 *.tgz
 
-src/*.js
-src/*.js.map
 karma.conf.js
